Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.14.0
-
None
-
d3595110f1869576b5580bb9b346817bce7f698a (qt-creator/qt-creator/master)
Description
After the fix for QTCREATORBUG-25069, I've noticed that importing qtquickcontrols2 will result in incorrect kits being selected:
This is not a huge deal, because I can just deselect them, but it definitely seems wrong. The path to the build directory of each configuration points to the same place (qt-dev-debug/qtquickcontrols2).
Here are the Qt versions:
Here is the qt-dev-debug kit:
For comparison, here is the qt-dev2-debug kit:
The only difference between the two is the Qt version.
Attachments
Issue Links
- resulted from
-
QTCREATORBUG-25069 Importing qtquickcontrols2 from a per-repo cmake build always results in an "Imported Kit"
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-25100 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
328238,4 | CMakeProjectManager: Fix importing Qt6 projects | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |